# numpy2dng

./: LICENSE  README.md  pyproject.toml
.github/workflows/: deploy.yaml  test.yaml
example/: example.py
src/numpy2dng/: __init__.py  core.py  defs.py  dng.py  packing.py
tests/: test_import.py  test_width_bitdepth.py
