[project]
name = "numpy2dng"
version = "0.1.0"
description = "Pure Python utility for creating DNG files from numpy arrays."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "rawpy>=0.25.1",
    "ruff>=0.14.10",
]

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"
default = true
